// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`recommend-me should match snapshot after loading search results 1`] = `
<DocumentFragment>
  <div
    class="pt-4 px-4 border border-gray-200 dark:border-gray-700 rounded-md"
  >
    <div
      class="flex justify-between items-center"
    >
      <div
        class="wigmix-widget-title text-primary"
        data-pw="rm-widget-title"
      >
        Alternate Picks
      </div>
    </div>
    <div
      class="flex gap-2 pt-1"
    >
      <button
        class="px-3 py-2 bg-gray-100 dark:bg-neutral-800 text-neutral-900 dark:text-neutral-100 rounded-md text-sm font-semibold transition-colors focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-600 dark:focus-visible:outline-blue-300"
      >
        Similar Products
      </button>
      <button
        class="px-3 py-2 bg-gray-100 dark:bg-neutral-800 text-neutral-900 dark:text-neutral-100 rounded-md text-sm font-semibold transition-colors focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-600 dark:focus-visible:outline-blue-300"
      >
        Complementary Products
      </button>
    </div>
    <div
      class="text-sm py-2 text-primary"
    >
      Or type your own recommendation query below
    </div>
    <div
      class="flex gap-0 border border-gray-300 rounded overflow-hidden w-full"
    >
      <button
        class="font-bold px-4 rounded-none h-10 text-sm transition-colors bg-gray-300 hover:bg-gray-400 text-gray-800 focus-visible:outline focus-visible:outline-2 focus-visible:-outline-offset-2 focus-visible:outline-blue-600 dark:focus-visible:outline-blue-300"
        data-pw="rm-recommend-me-button"
        disabled=""
      >
        <span>
          Show Me
        </span>
      </button>
      <div
        class="relative flex-1"
      >
        <div
          class="group flex flex-col data-[hidden=true]:hidden w-full relative justify-end data-[has-label=true]:mt-[calc(theme(fontSize.small)_+_10px)]"
          data-filled="true"
          data-filled-within="true"
          data-slot="base"
        >
          <div
            class="h-full flex flex-col"
            data-slot="main-wrapper"
          >
            <div
              class="relative w-full inline-flex tap-highlight-transparent flex-row items-center shadow-sm px-3 gap-3 border-medium border-default-200 data-[hover=true]:border-default-400 group-data-[focus=true]:border-default-foreground h-10 min-h-10 rounded-none transition-background !duration-150 transition-colors motion-reduce:transition-none border-s-0 rounded-e bg-default-100 text-primary focus-within:outline focus-within:outline-2 focus-within:-outline-offset-2 focus-within:outline-blue-600 dark:focus-within:outline-blue-300"
              data-slot="input-wrapper"
              style="cursor: text;"
            >
              <div
                class="inline-flex w-full items-center h-full box-border"
                data-slot="inner-wrapper"
              >
                <input
                  aria-label="Type your recommendation query"
                  autocomplete="off"
                  class="w-full font-normal bg-transparent !outline-none placeholder:text-foreground-500 focus-visible:outline-none data-[has-start-content=true]:ps-1.5 data-[has-end-content=true]:pe-1.5 file:cursor-pointer file:bg-transparent file:border-0 autofill:bg-transparent bg-clip-text text-small peer pe-6 input-search-cancel-button-none"
                  data-pw="rm-recommend-me-search-bar"
                  data-slot="input"
                  id="react-aria-:r7l:"
                  maxlength="500"
                  placeholder="an outfit to go with this"
                  title=""
                  type="text"
                  value=""
                />
                <button
                  aria-label="clear input"
                  class="p-2 -m-2 z-10 absolute end-3 start-auto pointer-events-none appearance-none select-none opacity-0 hover:!opacity-100 cursor-pointer active:!opacity-70 rounded-full outline-none data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 text-large peer-data-[filled=true]:pointer-events-auto peer-data-[filled=true]:opacity-70 peer-data-[filled=true]:block peer-data-[filled=true]:scale-100 scale-90 ease-out duration-150 transition-[opacity,transform] motion-reduce:transition-none motion-reduce:scale-100"
                  data-slot="clear-button"
                  tabindex="-1"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    focusable="false"
                    height="1em"
                    role="presentation"
                    viewBox="0 0 24 24"
                    width="1em"
                  >
                    <path
                      d="M12 2a10 10 0 1010 10A10.016 10.016 0 0012 2zm3.36 12.3a.754.754 0 010 1.06.748.748 0 01-1.06 0l-2.3-2.3-2.3 2.3a.748.748 0 01-1.06 0 .754.754 0 010-1.06l2.3-2.3-2.3-2.3A.75.75 0 019.7 8.64l2.3 2.3 2.3-2.3a.75.75 0 011.06 1.06l-2.3 2.3z"
                      fill="currentColor"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="flex flex-col"
    >
      <div
        data-pw="rm-product-result-carousel"
      >
        <div
          aria-atomic="true"
          aria-live="polite"
          class="sr-only"
          role="status"
        >
          Product results shown: 20
        </div>
        <div
          aria-label="Recommended products"
          class="flex space-x-4 overflow-x-auto pb-4 no-scrollbar p-2 items-end text-primary focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-600 dark:focus-visible:outline-blue-300"
          data-pw="rm-product-result-row"
          role="list"
          tabindex="0"
        >
          <div
            class=" group relative flex-shrink-0"
            role="listitem"
            style="column-gap: 8px; width: 200px;"
          >
            <div
              class="wigmix-product-card"
            >
              <a
                class="cursor-pointer"
                data-pw="rm-product-result-card-1"
                data-testid="wigmix-product-card-anchor"
                href="https://product-1/"
                rel=""
                target=""
              >
                <div
                  class="wigmix-product-card-image-container"
                >
                  <div
                    class="relative flex justify-center"
                  >
                    <img
                      alt="Product Brand 1"
                      class="wigmix-product-card-image object-cover"
                      data-pw="rm-product-result-card-image-1"
                      data-testid="wigmix-product-card-image"
                      src="https://main-image-1"
                    />
                  </div>
                </div>
                <div
                  class="wigmix-product-card-details pt-2"
                >
                  <span
                    class="wigmix-product-card-title line-clamp-1"
                  />
                  <span
                    class="wigmix-product-card-secondary-title line-clamp-1"
                  >
                    Product Brand 1
                  </span>
                  <div
                    class="wigmix-product-card-price-row flex flex-wrap items-center gap-1"
                  >
                    <span
                      class="wigmix-product-card-price"
                    >
                      $19.30
                    </span>
                  </div>
                </div>
              </a>
            </div>
          </div>
          <div
            class=" group relative flex-shrink-0"
            role="listitem"
            style="column-gap: 8px; width: 200px;"
          >
            <div
              class="wigmix-product-card"
            >
              <a
                class="cursor-pointer"
                data-pw="rm-product-result-card-2"
                data-testid="wigmix-product-card-anchor"
                href="https://product-2/"
                rel=""
                target=""
              >
                <div
                  class="wigmix-product-card-image-container"
                >
                  <div
                    class="relative flex justify-center"
                  >
                    <img
                      alt="Product Brand 2"
                      class="wigmix-product-card-image object-cover"
                      data-pw="rm-product-result-card-image-2"
                      data-testid="wigmix-product-card-image"
                      src="https://main-image-2"
                    />
                  </div>
                </div>
                <div
                  class="wigmix-product-card-details pt-2"
                >
                  <span
                    class="wigmix-product-card-title line-clamp-1"
                  />
                  <span
                    class="wigmix-product-card-secondary-title line-clamp-1"
                  >
                    Product Brand 2
                  </span>
                  <div
                    class="wigmix-product-card-price-row flex flex-wrap items-center gap-1"
                  >
                    <span
                      class="wigmix-product-card-price"
                    >
                      $7.00
                    </span>
                  </div>
                </div>
              </a>
            </div>
          </div>
          <div
            class=" group relative flex-shrink-0"
            role="listitem"
            style="column-gap: 8px; width: 200px;"
          >
            <div
              class="wigmix-product-card"
            >
              <a
                class="cursor-pointer"
                data-pw="rm-product-result-card-3"
                data-testid="wigmix-product-card-anchor"
                href="https://product-3/"
                rel=""
                target=""
              >
                <div
                  class="wigmix-product-card-image-container"
                >
                  <div
                    class="relative flex justify-center"
                  >
                    <img
                      alt="Product Brand 3"
                      class="wigmix-product-card-image object-cover"
                      data-pw="rm-product-result-card-image-3"
                      data-testid="wigmix-product-card-image"
                      src="https://main-image-3"
                    />
                  </div>
                </div>
                <div
                  class="wigmix-product-card-details pt-2"
                >
                  <span
                    class="wigmix-product-card-title line-clamp-1"
                  />
                  <span
                    class="wigmix-product-card-secondary-title line-clamp-1"
                  >
                    Product Brand 3
                  </span>
                  <div
                    class="wigmix-product-card-price-row flex flex-wrap items-center gap-1"
                  >
                    <span
                      class="wigmix-product-card-price"
                    >
                      $15.50
                    </span>
                  </div>
                </div>
              </a>
            </div>
          </div>
          <div
            class=" group relative flex-shrink-0"
            role="listitem"
            style="column-gap: 8px; width: 200px;"
          >
            <div
              class="wigmix-product-card"
            >
              <a
                class="cursor-pointer"
                data-pw="rm-product-result-card-4"
                data-testid="wigmix-product-card-anchor"
                href="https://product-4/"
                rel=""
                target=""
              >
                <div
                  class="wigmix-product-card-image-container"
                >
                  <div
                    class="relative flex justify-center"
                  >
                    <img
                      alt="Product Brand 4"
                      class="wigmix-product-card-image object-cover"
                      data-pw="rm-product-result-card-image-4"
                      data-testid="wigmix-product-card-image"
                      src="https://main-image-4"
                    />
                  </div>
                </div>
                <div
                  class="wigmix-product-card-details pt-2"
                >
                  <span
                    class="wigmix-product-card-title line-clamp-1"
                  />
                  <span
                    class="wigmix-product-card-secondary-title line-clamp-1"
                  >
                    Product Brand 4
                  </span>
                  <div
                    class="wigmix-product-card-price-row flex flex-wrap items-center gap-1"
                  >
                    <span
                      class="wigmix-product-card-price"
                    >
                      $14.80
                    </span>
                  </div>
                </div>
              </a>
            </div>
          </div>
          <div
            class=" group relative flex-shrink-0"
            role="listitem"
            style="column-gap: 8px; width: 200px;"
          >
            <div
              class="wigmix-product-card"
            >
              <a
                class="cursor-pointer"
                data-pw="rm-product-result-card-5"
                data-testid="wigmix-product-card-anchor"
                href="https://product-5/"
                rel=""
                target=""
              >
                <div
                  class="wigmix-product-card-image-container"
                >
                  <div
                    class="relative flex justify-center"
                  >
                    <img
                      alt="Product Brand 5"
                      class="wigmix-product-card-image object-cover"
                      data-pw="rm-product-result-card-image-5"
                      data-testid="wigmix-product-card-image"
                      src="https://main-image-5"
                    />
                  </div>
                </div>
                <div
                  class="wigmix-product-card-details pt-2"
                >
                  <span
                    class="wigmix-product-card-title line-clamp-1"
                  />
                  <span
                    class="wigmix-product-card-secondary-title line-clamp-1"
                  >
                    Product Brand 5
                  </span>
                  <div
                    class="wigmix-product-card-price-row flex flex-wrap items-center gap-1"
                  >
                    <span
                      class="wigmix-product-card-price"
                    >
                      $14.80
                    </span>
                  </div>
                </div>
              </a>
            </div>
          </div>
          <div
            class=" group relative flex-shrink-0"
            role="listitem"
            style="column-gap: 8px; width: 200px;"
          >
            <div
              class="wigmix-product-card"
            >
              <a
                class="cursor-pointer"
                data-pw="rm-product-result-card-6"
                data-testid="wigmix-product-card-anchor"
                href="https://product-6/"
                rel=""
                target=""
              >
                <div
                  class="wigmix-product-card-image-container"
                >
                  <div
                    class="relative flex justify-center"
                  >
                    <img
                      alt="Product Brand 6"
                      class="wigmix-product-card-image object-cover"
                      data-pw="rm-product-result-card-image-6"
                      data-testid="wigmix-product-card-image"
                      src="https://main-image-6"
                    />
                  </div>
                </div>
                <div
                  class="wigmix-product-card-details pt-2"
                >
                  <span
                    class="wigmix-product-card-title line-clamp-1"
                  />
                  <span
                    class="wigmix-product-card-secondary-title line-clamp-1"
                  >
                    Product Brand 6
                  </span>
                  <div
                    class="wigmix-product-card-price-row flex flex-wrap items-center gap-1"
                  >
                    <span
                      class="wigmix-product-card-price"
                    >
                      $20.60
                    </span>
                  </div>
                </div>
              </a>
            </div>
          </div>
          <div
            class=" group relative flex-shrink-0"
            role="listitem"
            style="column-gap: 8px; width: 200px;"
          >
            <div
              class="wigmix-product-card"
            >
              <a
                class="cursor-pointer"
                data-pw="rm-product-result-card-7"
                data-testid="wigmix-product-card-anchor"
                href="https://product-7/"
                rel=""
                target=""
              >
                <div
                  class="wigmix-product-card-image-container"
                >
                  <div
                    class="relative flex justify-center"
                  >
                    <img
                      alt="Product Brand 7"
                      class="wigmix-product-card-image object-cover"
                      data-pw="rm-product-result-card-image-7"
                      data-testid="wigmix-product-card-image"
                      src="https://main-image-7"
                    />
                  </div>
                </div>
                <div
                  class="wigmix-product-card-details pt-2"
                >
                  <span
                    class="wigmix-product-card-title line-clamp-1"
                  />
                  <span
                    class="wigmix-product-card-secondary-title line-clamp-1"
                  >
                    Product Brand 7
                  </span>
                  <div
                    class="wigmix-product-card-price-row flex flex-wrap items-center gap-1"
                  >
                    <span
                      class="wigmix-product-card-price"
                    >
                      $23.00
                    </span>
                  </div>
                </div>
              </a>
            </div>
          </div>
          <div
            class=" group relative flex-shrink-0"
            role="listitem"
            style="column-gap: 8px; width: 200px;"
          >
            <div
              class="wigmix-product-card"
            >
              <a
                class="cursor-pointer"
                data-pw="rm-product-result-card-8"
                data-testid="wigmix-product-card-anchor"
                href="https://product-8/"
                rel=""
                target=""
              >
                <div
                  class="wigmix-product-card-image-container"
                >
                  <div
                    class="relative flex justify-center"
                  >
                    <img
                      alt="Product Brand 8"
                      class="wigmix-product-card-image object-cover"
                      data-pw="rm-product-result-card-image-8"
                      data-testid="wigmix-product-card-image"
                      src="https://main-image-8"
                    />
                  </div>
                </div>
                <div
                  class="wigmix-product-card-details pt-2"
                >
                  <span
                    class="wigmix-product-card-title line-clamp-1"
                  />
                  <span
                    class="wigmix-product-card-secondary-title line-clamp-1"
                  >
                    Product Brand 8
                  </span>
                  <div
                    class="wigmix-product-card-price-row flex flex-wrap items-center gap-1"
                  >
                    <span
                      class="wigmix-product-card-price"
                    >
                      $18.90
                    </span>
                  </div>
                </div>
              </a>
            </div>
          </div>
          <div
            class=" group relative flex-shrink-0"
            role="listitem"
            style="column-gap: 8px; width: 200px;"
          >
            <div
              class="wigmix-product-card"
            >
              <a
                class="cursor-pointer"
                data-pw="rm-product-result-card-9"
                data-testid="wigmix-product-card-anchor"
                href="https://product-9/"
                rel=""
                target=""
              >
                <div
                  class="wigmix-product-card-image-container"
                >
                  <div
                    class="relative flex justify-center"
                  >
                    <img
                      alt="Product Brand 9"
                      class="wigmix-product-card-image object-cover"
                      data-pw="rm-product-result-card-image-9"
                      data-testid="wigmix-product-card-image"
                      src="https://main-image-9"
                    />
                  </div>
                </div>
                <div
                  class="wigmix-product-card-details pt-2"
                >
                  <span
                    class="wigmix-product-card-title line-clamp-1"
                  />
                  <span
                    class="wigmix-product-card-secondary-title line-clamp-1"
                  >
                    Product Brand 9
                  </span>
                  <div
                    class="wigmix-product-card-price-row flex flex-wrap items-center gap-1"
                  >
                    <span
                      class="wigmix-product-card-price"
                    >
                      $7.00
                    </span>
                  </div>
                </div>
              </a>
            </div>
          </div>
          <div
            class=" group relative flex-shrink-0"
            role="listitem"
            style="column-gap: 8px; width: 200px;"
          >
            <div
              class="wigmix-product-card"
            >
              <a
                class="cursor-pointer"
                data-pw="rm-product-result-card-10"
                data-testid="wigmix-product-card-anchor"
                href="https://product-10/"
                rel=""
                target=""
              >
                <div
                  class="wigmix-product-card-image-container"
                >
                  <div
                    class="relative flex justify-center"
                  >
                    <img
                      alt="Product Brand 10"
                      class="wigmix-product-card-image object-cover"
                      data-pw="rm-product-result-card-image-10"
                      data-testid="wigmix-product-card-image"
                      src="https://main-image-10"
                    />
                  </div>
                </div>
                <div
                  class="wigmix-product-card-details pt-2"
                >
                  <span
                    class="wigmix-product-card-title line-clamp-1"
                  />
                  <span
                    class="wigmix-product-card-secondary-title line-clamp-1"
                  >
                    Product Brand 10
                  </span>
                  <div
                    class="wigmix-product-card-price-row flex flex-wrap items-center gap-1"
                  >
                    <span
                      class="wigmix-product-card-price"
                    >
                      $14.80
                    </span>
                  </div>
                </div>
              </a>
            </div>
          </div>
          <div
            class=" group relative flex-shrink-0"
            role="listitem"
            style="column-gap: 8px; width: 200px;"
          >
            <div
              class="wigmix-product-card"
            >
              <a
                class="cursor-pointer"
                data-pw="rm-product-result-card-11"
                data-testid="wigmix-product-card-anchor"
                href="https://product-11/"
                rel=""
                target=""
              >
                <div
                  class="wigmix-product-card-image-container"
                >
                  <div
                    class="relative flex justify-center"
                  >
                    <img
                      alt="Product Brand 11"
                      class="wigmix-product-card-image object-cover"
                      data-pw="rm-product-result-card-image-11"
                      data-testid="wigmix-product-card-image"
                      src="https://main-image-11"
                    />
                  </div>
                </div>
                <div
                  class="wigmix-product-card-details pt-2"
                >
                  <span
                    class="wigmix-product-card-title line-clamp-1"
                  />
                  <span
                    class="wigmix-product-card-secondary-title line-clamp-1"
                  >
                    Product Brand 11
                  </span>
                  <div
                    class="wigmix-product-card-price-row flex flex-wrap items-center gap-1"
                  >
                    <span
                      class="wigmix-product-card-price"
                    >
                      $3.00
                    </span>
                  </div>
                </div>
              </a>
            </div>
          </div>
          <div
            class=" group relative flex-shrink-0"
            role="listitem"
            style="column-gap: 8px; width: 200px;"
          >
            <div
              class="wigmix-product-card"
            >
              <a
                class="cursor-pointer"
                data-pw="rm-product-result-card-12"
                data-testid="wigmix-product-card-anchor"
                href="https://product-12/"
                rel=""
                target=""
              >
                <div
                  class="wigmix-product-card-image-container"
                >
                  <div
                    class="relative flex justify-center"
                  >
                    <img
                      alt="Product Brand 12"
                      class="wigmix-product-card-image object-cover"
                      data-pw="rm-product-result-card-image-12"
                      data-testid="wigmix-product-card-image"
                      src="https://main-image-12"
                    />
                  </div>
                </div>
                <div
                  class="wigmix-product-card-details pt-2"
                >
                  <span
                    class="wigmix-product-card-title line-clamp-1"
                  />
                  <span
                    class="wigmix-product-card-secondary-title line-clamp-1"
                  >
                    Product Brand 12
                  </span>
                  <div
                    class="wigmix-product-card-price-row flex flex-wrap items-center gap-1"
                  >
                    <span
                      class="wigmix-product-card-price"
                    >
                      $12.50
                    </span>
                  </div>
                </div>
              </a>
            </div>
          </div>
          <div
            class=" group relative flex-shrink-0"
            role="listitem"
            style="column-gap: 8px; width: 200px;"
          >
            <div
              class="wigmix-product-card"
            >
              <a
                class="cursor-pointer"
                data-pw="rm-product-result-card-13"
                data-testid="wigmix-product-card-anchor"
                href="https://product-13/"
                rel=""
                target=""
              >
                <div
                  class="wigmix-product-card-image-container"
                >
                  <div
                    class="relative flex justify-center"
                  >
                    <img
                      alt="Product Brand 13"
                      class="wigmix-product-card-image object-cover"
                      data-pw="rm-product-result-card-image-13"
                      data-testid="wigmix-product-card-image"
                      src="https://main-image-13"
                    />
                  </div>
                </div>
                <div
                  class="wigmix-product-card-details pt-2"
                >
                  <span
                    class="wigmix-product-card-title line-clamp-1"
                  />
                  <span
                    class="wigmix-product-card-secondary-title line-clamp-1"
                  >
                    Product Brand 13
                  </span>
                  <div
                    class="wigmix-product-card-price-row flex flex-wrap items-center gap-1"
                  >
                    <span
                      class="wigmix-product-card-price"
                    >
                      $19.60
                    </span>
                  </div>
                </div>
              </a>
            </div>
          </div>
          <div
            class=" group relative flex-shrink-0"
            role="listitem"
            style="column-gap: 8px; width: 200px;"
          >
            <div
              class="wigmix-product-card"
            >
              <a
                class="cursor-pointer"
                data-pw="rm-product-result-card-14"
                data-testid="wigmix-product-card-anchor"
                href="https://product-14/"
                rel=""
                target=""
              >
                <div
                  class="wigmix-product-card-image-container"
                >
                  <div
                    class="relative flex justify-center"
                  >
                    <img
                      alt="Product Brand 14"
                      class="wigmix-product-card-image object-cover"
                      data-pw="rm-product-result-card-image-14"
                      data-testid="wigmix-product-card-image"
                      src="https://main-image-14"
                    />
                  </div>
                </div>
                <div
                  class="wigmix-product-card-details pt-2"
                >
                  <span
                    class="wigmix-product-card-title line-clamp-1"
                  />
                  <span
                    class="wigmix-product-card-secondary-title line-clamp-1"
                  >
                    Product Brand 14
                  </span>
                  <div
                    class="wigmix-product-card-price-row flex flex-wrap items-center gap-1"
                  >
                    <span
                      class="wigmix-product-card-price"
                    >
                      $7.10
                    </span>
                  </div>
                </div>
              </a>
            </div>
          </div>
          <div
            class=" group relative flex-shrink-0"
            role="listitem"
            style="column-gap: 8px; width: 200px;"
          >
            <div
              class="wigmix-product-card"
            >
              <a
                class="cursor-pointer"
                data-pw="rm-product-result-card-15"
                data-testid="wigmix-product-card-anchor"
                href="https://product-15/"
                rel=""
                target=""
              >
                <div
                  class="wigmix-product-card-image-container"
                >
                  <div
                    class="relative flex justify-center"
                  >
                    <img
                      alt="Product Brand 15"
                      class="wigmix-product-card-image object-cover"
                      data-pw="rm-product-result-card-image-15"
                      data-testid="wigmix-product-card-image"
                      src="https://main-image-15"
                    />
                  </div>
                </div>
                <div
                  class="wigmix-product-card-details pt-2"
                >
                  <span
                    class="wigmix-product-card-title line-clamp-1"
                  />
                  <span
                    class="wigmix-product-card-secondary-title line-clamp-1"
                  >
                    Product Brand 15
                  </span>
                  <div
                    class="wigmix-product-card-price-row flex flex-wrap items-center gap-1"
                  >
                    <span
                      class="wigmix-product-card-price"
                    >
                      $23.30
                    </span>
                  </div>
                </div>
              </a>
            </div>
          </div>
          <div
            class=" group relative flex-shrink-0"
            role="listitem"
            style="column-gap: 8px; width: 200px;"
          >
            <div
              class="wigmix-product-card"
            >
              <a
                class="cursor-pointer"
                data-pw="rm-product-result-card-16"
                data-testid="wigmix-product-card-anchor"
                href="https://product-16/"
                rel=""
                target=""
              >
                <div
                  class="wigmix-product-card-image-container"
                >
                  <div
                    class="relative flex justify-center"
                  >
                    <img
                      alt="Product Brand 16"
                      class="wigmix-product-card-image object-cover"
                      data-pw="rm-product-result-card-image-16"
                      data-testid="wigmix-product-card-image"
                      src="https://main-image-16"
                    />
                  </div>
                </div>
                <div
                  class="wigmix-product-card-details pt-2"
                >
                  <span
                    class="wigmix-product-card-title line-clamp-1"
                  />
                  <span
                    class="wigmix-product-card-secondary-title line-clamp-1"
                  >
                    Product Brand 16
                  </span>
                  <div
                    class="wigmix-product-card-price-row flex flex-wrap items-center gap-1"
                  >
                    <span
                      class="wigmix-product-card-price"
                    >
                      $21.10
                    </span>
                  </div>
                </div>
              </a>
            </div>
          </div>
          <div
            class=" group relative flex-shrink-0"
            role="listitem"
            style="column-gap: 8px; width: 200px;"
          >
            <div
              class="wigmix-product-card"
            >
              <a
                class="cursor-pointer"
                data-pw="rm-product-result-card-17"
                data-testid="wigmix-product-card-anchor"
                href="https://product-17/"
                rel=""
                target=""
              >
                <div
                  class="wigmix-product-card-image-container"
                >
                  <div
                    class="relative flex justify-center"
                  >
                    <img
                      alt="Product Brand 17"
                      class="wigmix-product-card-image object-cover"
                      data-pw="rm-product-result-card-image-17"
                      data-testid="wigmix-product-card-image"
                      src="https://main-image-17"
                    />
                  </div>
                </div>
                <div
                  class="wigmix-product-card-details pt-2"
                >
                  <span
                    class="wigmix-product-card-title line-clamp-1"
                  />
                  <span
                    class="wigmix-product-card-secondary-title line-clamp-1"
                  >
                    Product Brand 17
                  </span>
                  <div
                    class="wigmix-product-card-price-row flex flex-wrap items-center gap-1"
                  >
                    <span
                      class="wigmix-product-card-price"
                    >
                      $6.50
                    </span>
                  </div>
                </div>
              </a>
            </div>
          </div>
          <div
            class=" group relative flex-shrink-0"
            role="listitem"
            style="column-gap: 8px; width: 200px;"
          >
            <div
              class="wigmix-product-card"
            >
              <a
                class="cursor-pointer"
                data-pw="rm-product-result-card-18"
                data-testid="wigmix-product-card-anchor"
                href="https://product-18/"
                rel=""
                target=""
              >
                <div
                  class="wigmix-product-card-image-container"
                >
                  <div
                    class="relative flex justify-center"
                  >
                    <img
                      alt="Product Brand 18"
                      class="wigmix-product-card-image object-cover"
                      data-pw="rm-product-result-card-image-18"
                      data-testid="wigmix-product-card-image"
                      src="https://main-image-18"
                    />
                  </div>
                </div>
                <div
                  class="wigmix-product-card-details pt-2"
                >
                  <span
                    class="wigmix-product-card-title line-clamp-1"
                  />
                  <span
                    class="wigmix-product-card-secondary-title line-clamp-1"
                  >
                    Product Brand 18
                  </span>
                  <div
                    class="wigmix-product-card-price-row flex flex-wrap items-center gap-1"
                  >
                    <span
                      class="wigmix-product-card-price"
                    >
                      $2.00
                    </span>
                  </div>
                </div>
              </a>
            </div>
          </div>
          <div
            class=" group relative flex-shrink-0"
            role="listitem"
            style="column-gap: 8px; width: 200px;"
          >
            <div
              class="wigmix-product-card"
            >
              <a
                class="cursor-pointer"
                data-pw="rm-product-result-card-19"
                data-testid="wigmix-product-card-anchor"
                href="https://product-19/"
                rel=""
                target=""
              >
                <div
                  class="wigmix-product-card-image-container"
                >
                  <div
                    class="relative flex justify-center"
                  >
                    <img
                      alt="Product Brand 19"
                      class="wigmix-product-card-image object-cover"
                      data-pw="rm-product-result-card-image-19"
                      data-testid="wigmix-product-card-image"
                      src="https://main-image-19"
                    />
                  </div>
                </div>
                <div
                  class="wigmix-product-card-details pt-2"
                >
                  <span
                    class="wigmix-product-card-title line-clamp-1"
                  />
                  <span
                    class="wigmix-product-card-secondary-title line-clamp-1"
                  >
                    Product Brand 19
                  </span>
                  <div
                    class="wigmix-product-card-price-row flex flex-wrap items-center gap-1"
                  >
                    <span
                      class="wigmix-product-card-price"
                    >
                      $7.00
                    </span>
                  </div>
                </div>
              </a>
            </div>
          </div>
          <div
            class=" group relative flex-shrink-0"
            role="listitem"
            style="column-gap: 8px; width: 200px;"
          >
            <div
              class="wigmix-product-card"
            >
              <a
                class="cursor-pointer"
                data-pw="rm-product-result-card-20"
                data-testid="wigmix-product-card-anchor"
                href="https://product-20/"
                rel=""
                target=""
              >
                <div
                  class="wigmix-product-card-image-container"
                >
                  <div
                    class="relative flex justify-center"
                  >
                    <img
                      alt="Product Brand 20"
                      class="wigmix-product-card-image object-cover"
                      data-pw="rm-product-result-card-image-20"
                      data-testid="wigmix-product-card-image"
                      src="https://main-image-20"
                    />
                  </div>
                </div>
                <div
                  class="wigmix-product-card-details pt-2"
                >
                  <span
                    class="wigmix-product-card-title line-clamp-1"
                  />
                  <span
                    class="wigmix-product-card-secondary-title line-clamp-1"
                  >
                    Product Brand 20
                  </span>
                  <div
                    class="wigmix-product-card-price-row flex flex-wrap items-center gap-1"
                  >
                    <span
                      class="wigmix-product-card-price"
                    >
                      $26.70
                    </span>
                  </div>
                </div>
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`recommend-me should match snapshot for default layout 1`] = `
<DocumentFragment>
  <div
    class="pt-4 px-4 border border-gray-200 dark:border-gray-700 rounded-md"
  >
    <div
      class="flex justify-between items-center"
    >
      <div
        class="wigmix-widget-title text-primary"
        data-pw="rm-widget-title"
      >
        Alternate Picks
      </div>
    </div>
    <div
      class="flex gap-2 pt-1"
    >
      <button
        class="px-3 py-2 bg-gray-100 dark:bg-neutral-800 text-neutral-900 dark:text-neutral-100 rounded-md text-sm font-semibold transition-colors focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-600 dark:focus-visible:outline-blue-300"
      >
        Similar Products
      </button>
      <button
        class="px-3 py-2 bg-gray-100 dark:bg-neutral-800 text-neutral-900 dark:text-neutral-100 rounded-md text-sm font-semibold transition-colors focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-600 dark:focus-visible:outline-blue-300"
      >
        Complementary Products
      </button>
    </div>
    <div
      class="text-sm py-2 text-primary"
    >
      Or type your own recommendation query below
    </div>
    <div
      class="flex gap-0 border border-gray-300 rounded overflow-hidden w-full"
    >
      <button
        class="font-bold px-4 rounded-none h-10 text-sm transition-colors bg-gray-300 hover:bg-gray-400 text-gray-800 focus-visible:outline focus-visible:outline-2 focus-visible:-outline-offset-2 focus-visible:outline-blue-600 dark:focus-visible:outline-blue-300"
        data-pw="rm-recommend-me-button"
        disabled=""
      >
        <span>
          Show Me
        </span>
      </button>
      <div
        class="relative flex-1"
      >
        <div
          class="group flex flex-col data-[hidden=true]:hidden w-full relative justify-end data-[has-label=true]:mt-[calc(theme(fontSize.small)_+_10px)]"
          data-filled="true"
          data-filled-within="true"
          data-slot="base"
        >
          <div
            class="h-full flex flex-col"
            data-slot="main-wrapper"
          >
            <div
              class="relative w-full inline-flex tap-highlight-transparent flex-row items-center shadow-sm px-3 gap-3 border-medium border-default-200 data-[hover=true]:border-default-400 group-data-[focus=true]:border-default-foreground h-10 min-h-10 rounded-none transition-background !duration-150 transition-colors motion-reduce:transition-none border-s-0 rounded-e bg-default-100 text-primary focus-within:outline focus-within:outline-2 focus-within:-outline-offset-2 focus-within:outline-blue-600 dark:focus-within:outline-blue-300"
              data-slot="input-wrapper"
              style="cursor: text;"
            >
              <div
                class="inline-flex w-full items-center h-full box-border"
                data-slot="inner-wrapper"
              >
                <input
                  aria-label="Type your recommendation query"
                  autocomplete="off"
                  class="w-full font-normal bg-transparent !outline-none placeholder:text-foreground-500 focus-visible:outline-none data-[has-start-content=true]:ps-1.5 data-[has-end-content=true]:pe-1.5 file:cursor-pointer file:bg-transparent file:border-0 autofill:bg-transparent bg-clip-text text-small peer pe-6 input-search-cancel-button-none"
                  data-pw="rm-recommend-me-search-bar"
                  data-slot="input"
                  id="react-aria-:r5:"
                  maxlength="500"
                  placeholder="an outfit to go with this"
                  title=""
                  type="text"
                  value=""
                />
                <button
                  aria-label="clear input"
                  class="p-2 -m-2 z-10 absolute end-3 start-auto pointer-events-none appearance-none select-none opacity-0 hover:!opacity-100 cursor-pointer active:!opacity-70 rounded-full outline-none data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 text-large peer-data-[filled=true]:pointer-events-auto peer-data-[filled=true]:opacity-70 peer-data-[filled=true]:block peer-data-[filled=true]:scale-100 scale-90 ease-out duration-150 transition-[opacity,transform] motion-reduce:transition-none motion-reduce:scale-100"
                  data-slot="clear-button"
                  tabindex="-1"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    focusable="false"
                    height="1em"
                    role="presentation"
                    viewBox="0 0 24 24"
                    width="1em"
                  >
                    <path
                      d="M12 2a10 10 0 1010 10A10.016 10.016 0 0012 2zm3.36 12.3a.754.754 0 010 1.06.748.748 0 01-1.06 0l-2.3-2.3-2.3 2.3a.748.748 0 01-1.06 0 .754.754 0 010-1.06l2.3-2.3-2.3-2.3A.75.75 0 019.7 8.64l2.3 2.3 2.3-2.3a.75.75 0 011.06 1.06l-2.3 2.3z"
                      fill="currentColor"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="flex flex-col"
    >
      <div
        data-pw="rm-product-result-carousel"
      >
        <div
          aria-atomic="true"
          aria-live="polite"
          class="sr-only"
          role="status"
        />
        <div
          aria-label="Recommended products"
          class="flex space-x-4 overflow-x-auto pb-4 no-scrollbar p-2 items-end text-primary focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-600 dark:focus-visible:outline-blue-300"
          data-pw="rm-product-result-row"
          role="list"
          tabindex="0"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;
